# Linkedin-ai-poster

./: LICENSE  README.md
backend/linkedin/: .gitignore  README.md  pyproject.toml
backend/linkedin/src/linkedin/: crew.py  main.py
backend/linkedin/src/linkedin/config/: agents.yaml  tasks.yaml
backend/linkedin/src/linkedin/tools/: linkedin_metrics.py  linkedin_publish.py  serper_trends.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  api.js  theme.js
frontend/src/components/: ControlsPanel.js  DraftPreview.js  MetricsCards.js  MetricsChart.js
