[project]
name = "linkedin"
version = "0.1.0"
description = "linkedin using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.121.0,<1.0.0"
]

[project.scripts]
linkedin = "linkedin.main:run"
run_crew = "linkedin.main:run"
train = "linkedin.main:train"
replay = "linkedin.main:replay"
test = "linkedin.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
